[package]
name = "patchbay"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible LLM gateway/router with tag-based privacy routing, latency-aware backend selection, fallback chains, per-key budgets, and SSE streaming passthrough"
license = "Apache-2.0"
authors = ["Sam Latino <Latinosammy2@gmail.com>"]

[lib]
name = "patchbay"
path = "src/lib.rs"

[[bin]]
name = "patchbay"
path = "src/main.rs"

[[bench]]
name = "routing"
harness = false

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
governor = "0.6"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
futures = "0.3"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
